package ar.edu.info.unlp.Repaso_Ej1;

public class Tweet {

}
